# image-processor

./: .gitignore  CMakeLists.txt  README.md  SimplePhotoEditor.sln  config.yaml  main.cpp
Assignment/: ASSIGNMENT.md
Assignment/assets/: specifikace.md  style.css
Configuration/: ApplicationConfiguration.cpp  ApplicationConfiguration.h
ImageEffects/: GrayscaleEffect.cpp  GrayscaleEffect.h  ImageEffect.cpp  ImageEffect.h  ImageEffectFactory.cpp  ImageEffectFactory.h
ImageEffects/ASCII/: AsciiArtEffect.cpp  AsciiArtEffect.h
ImageEffects/Convolution/: ConvolutionProcessor.cpp  ConvolutionProcessor.h
ImageEffects/Convolution/ConvolutionKernels/: ImageKernel.cpp  ImageKernel.h
ImageEffects/Convolution/ConvolutionKernels/Blur/: BoxBlurImageKernel.cpp  BoxBlurImageKernel.h  GaussianBlurImageKernel.cpp  GaussianBlurImageKernel.h
ImageEffects/Convolution/ConvolutionKernels/EdgeDetection/: SobelImageKernel.cpp  SobelImageKernel.h
ImageEffects/Convolution/ConvolutionKernels/Sobel/: LeftSobelImageKernel.cpp  LeftSobelImageKernel.h  SobelImageKernel.cpp  SobelImageKernel.h
ImageEffects/Convulention/: ImageKernel.cpp  ImageKernel.h
ImageEffects/GrayscaleEffect/: GrayscaleEffect.cpp  GrayscaleEffect.h
ImageEffects/GrayscaleEffect/Algorithms/: AverageGrayscaleStrategy.cpp  AverageGrayscaleStrategy.h  GrayscaleStrategyBase.h  LinearGrayscaleStrategy.cpp  LinearGrayscaleStrategy.h
ImageEffects/NegativeEffect/: NegativeEffect.cpp  NegativeEffect.h
ImageEffects/Transformations/: FlipTransform.cpp  FlipTransform.h  RegularRotation.cpp  RegularRotation.h
ImageLibrary/: ImageData.cpp  ImageData.h  ImageFormat.cpp  ImageFormat.h  ImageFormatFactory.cpp  ImageFormatFactory.h  ImagesLibrary.cpp  ImagesLibrary.h
ImageLibrary/Image/: ImageData.cpp  ImageData.h
ImageLibrary/ImageFormat/: ImageJPG.cpp  ImageJPG.h  ImagePNG.cpp  ImagePNG.h
Imagesibrary/: ImageData.h  ImagesLibrary.h
Services/: ConfigurationLoader.cpp  ConfigurationLoader.h  yamlConfigurationLoader.cpp  yamlConfigurationLoader.h
SimplePhotoEditor/: IdleMenuGroup.cpp  Main.cpp  MenuItemGroup.h  MenuItemGroupBase.cpp  MenuOption.h  MenuOptionBase.cpp  SecondMenuGroup.cpp  SecondMenuOption.cpp  SelectIdleMenuGroup.cpp  SimplePhotoEditor.vcxproj  SimplePhotoEditor.vcxproj.filters  UserMenu.cpp  UserMenu.h  inp.txt
UserMenu/: UserMenu.cpp  UserMenu.h
UserMenu/GlobalMenuCommands/: StoreImageDataOption.cpp  StoreImageDataOption.h
UserMenu/MenuCommands/: EndApplicationOption.cpp  GoFiltersMenuGroup.cpp  GoFiltersMenuGroup.h  GoIdleMenuOption.cpp  GoIdleMenuOption.h  GoLibraryMenuGroup.cpp  GoLibraryMenuGroup.h  GoMainMenuOption.cpp  GoMainMenuOption.h  GoSecondMenuOption.cpp  GoSecondMenuOption.h  MenuOption.cpp  MenuOption.h  StoreImageDataOption.h
UserMenu/MenuGroups/: MenuGroup.cpp  MenuGroup.h  MenuGroupFactory.cpp  MenuGroupFactory.h  MenuOption.cpp  MenuOption.h
UserMenu/MenuGroups/FiltersMenuGroup/: FiltersMenuGroup.cpp  FiltersMenuGroup.h
UserMenu/MenuGroups/FiltersMenuGroup/Comands/: ApplyASCIIArtEffect.cpp  ApplyASCIIArtEffect.h  ApplyAverageGrayscaleOption.cpp  ApplyAverageGrayscaleOption.h  ApplyBoxBlurOption.cpp  ApplyBoxBlurOption.h  ApplyFilterOptionBase.cpp  ApplyFilterOptionBase.h  ApplyFlipTransformOption.cpp  ApplyFlipTransformOption.h  ApplyGaussianBlurOption.cpp  ApplyGaussianBlurOption.h  ApplyLinearGrayscaleOption.cpp  ApplyLinearGrayscaleOption.h  ApplyNegativeOption.cpp  ApplyNegativeOption.h  ApplySobelOption.cpp  ApplySobelOption.h
UserMenu/MenuGroups/FiltersMenuGroup/Commands/: ApplyASCIIArtEffect.cpp  ApplyASCIIArtEffect.h  ApplyAverageGrayscaleOption.h  ApplyBoxBlurOption.h  ApplyFilterOptionBase.cpp  ApplyFilterOptionBase.h  ApplyFlipTransformOption.cpp  ApplyFlipTransformOption.h  ApplyGaussianBlurOption.h  ApplyNegativeOption.cpp
UserMenu/MenuGroups/IdleMenuGroup/: IdleMenuGroup.cpp  IdleMenuGroup.h
UserMenu/MenuGroups/LibraryMenuGroup/: LibraryMenuGroup.cpp  LibraryMenuGroup.h
UserMenu/MenuGroups/LibraryMenuGroup/Commands/: AddAllImagesFromDirOption.cpp  AddAllImagesFromDirOption.h  AddImageToLibrary.cpp  AddImageToLibrary.h  ListAllImagesOption.cpp  ListAllImagesOption.h
UserMenu/MenuGroups/MainMenuGroup/: MainMenuGroup.cpp  MainMenuGroup.h
UserMenu/MenuGroups/MainMenuGroup/Commands/: GoFiltersMenuGroup.cpp  (+5 more)
UserMenu/MenuGroups/OptionsMenuGroup/: OptionsMenuGroup.cpp  OptionsMenuGroup.h
UserMenu/MenuGroups/SecondMenuGroup/: SecondMenuGroup.cpp  SecondMenuGroup.h
UserMenu/OtherMenuCommands/: EndApplicationOption.h  MenuOption.h  StoreImageDataOption.cpp
(+2 files in other folders)
